--- a/requirements.txt
+++ b/requirements.txt
@@ -36,8 +36,9 @@ lupa
 martor @ git+https://github.com/VNOI-Admin/martor.git
 netaddr
 webauthn<1
-bleach
+bleach>=4,<5
 markdown2 @ git+https://github.com/VNOI-Admin/python-markdown2.git
 discord-webhook
-django-admin-sortable2
+django-admin-sortable2<2
 icalendar
+websocket-client
